--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "random_color"
-version = "0.6.1"
+version = "0.6.2"
 authors = ["Lucas Maximiliano Marino <lucasmmarino@gmail.com>"]
 license = "MIT"
 readme = "README.md"
@@ -9,8 +9,5 @@ repository = "https://github.com/elementh/random_color.git"
 homepage ="https://github.com/elementh/random_color"
 description = "Rust crate for generating random attractive colors"
 
-[features]
-wasm-bindgen = ["rand/wasm-bindgen"]
-
 [dependencies]
-rand = { version = "0.7.3", features = ["small_rng"] }
+fastrand = "1.7.0"
